[refactor] #3 로그인 테스트 작성 중
1. password encoder를 auth service에서 DI받으면 순환참조 오류 발생